--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background-color: #f8f9fa;
-    color: #333;
+    background-color: #3b0a06;
+    color: white;
 }
 
 /* Navigation Bar */
